Apply negative offset to done input to ensure alignment

--- a/src/components/done-input/_style.scss
+++ b/src/components/done-input/_style.scss
@@ -4,6 +4,7 @@
 	position: relative;
 	border: 1px solid $border-color;
 	border-radius: $border-radius;
+	margin: 0 -1px;
 }
 
 .done-input .done-status,
